--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.shoofi.shopping">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.shoofi.shoofir">
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
   <uses-permission android:name="android.permission.CAMERA"/>
@@ -35,12 +35,14 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="com.shoofi.shopping"/>
-        <data android:scheme="exp+shoofi"/>
-        <data android:scheme="com.shoofi.shopping"/>
+        <data android:scheme="com.shoofi.shoofir"/>
         <data android:scheme="exp+shoofi"/>
         <data android:scheme="exp+shoofi"/>
-        <data android:scheme="com.shoofi.shopping"/>
+        <data android:scheme="com.shoofi.shoofir"/>
+        <data android:scheme="exp+shoofi"/>
+        <data android:scheme="exp+shoofi"/>
+        <data android:scheme="com.shoofi.shoofir"/>
+        <data android:scheme="exp+shoofishoofir"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
