--- a/ios/app/Info.plist
+++ b/ios/app/Info.plist
@@ -5,7 +5,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>shoofi</string>
+    <string>Shoofi Shoofir</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -25,13 +25,13 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>com.shoofi.shopping</string>
+          <string>com.shoofi.shoofir</string>
         </array>
       </dict>
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>exp+shoofi</string>
+          <string>exp+shoofishoofir</string>
         </array>
       </dict>
     </array>
